header fix align middle

--- a/public/theme/style.css
+++ b/public/theme/style.css
@@ -4136,3 +4136,7 @@ ul.breadcome-menu {
   padding-top: 5px;
   padding-bottom: 20px;
 }
+
+.top-zero {
+	top: 0 !important;
+}
